Add new MAP signatures and update WB-MAPs testing firmware to 2.10.4 (#866)
The new MAP signatures (devices without EEPROM):
map3eG16e, map3evG16e, map6semG16e, map12eGe.

--- a/releases.yaml
+++ b/releases.yaml
@@ -1301,6 +1301,10 @@ releases:
             map6seG16: 2.10.2
             map6sG16: 2.6.3         # таргет не проходит стенд калибровки на прошивке 2.7.1
             map6semG16: 2.10.2
+            map3eG16e: 2.10.4
+            map3evG16e: 2.10.4
+            map6semG16e: 2.10.4
+            map12eGe: 2.10.4
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.5.2
@@ -1429,13 +1433,17 @@ releases:
             map6s51: 2.6.3          # таргет не проходит стенд калибровки на прошивке 2.7.1
             map6se: 2.10.2
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
-            map12eG: 2.10.2
+            map12eG: 2.10.4
             map12h: 2.7.4           # таргет не проходит стенд калибровки на прошивке 2.7.5
-            map3eG16: 2.10.2
-            map3evG16: 2.10.2
+            map3eG16: 2.10.4
+            map3evG16: 2.10.4
             map6seG16: 2.10.2
             map6sG16: 2.6.3         # таргет не проходит стенд калибровки на прошивке 2.7.1
-            map6semG16: 2.10.2
+            map6semG16: 2.10.4
+            map3eG16e: 2.10.4
+            map3evG16e: 2.10.4
+            map6semG16e: 2.10.4
+            map12eGe: 2.10.4
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.5.2
