--- a/releases.yaml
+++ b/releases.yaml
@@ -1436,7 +1436,7 @@ releases:
             map6se: 2.10.2
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
             map12eG: 2.10.4
-            map12h: 2.7.4           # таргет не проходит стенд калибровки на прошивке 2.7.5
+            map12h: 2.10.4
             map3eG16: 2.10.4
             map3evG16: 2.10.4
             map6seG16: 2.10.2
