--- a/releases.yaml
+++ b/releases.yaml
@@ -1431,7 +1431,7 @@ releases:
             map3eG: 2.10.5
             map3h: 2.7.4            # нет в наличии устройства для проверок новых прошивок
             map3h51: 2.10.5
-            map6s: 2.6.3            # нет в наличии устройства для проверок новых прошивок
+            map6s: 2.6.3            # нет в наличии исправного устройства для проверок новых прошивок
             map6s51: 2.10.5
             map6se: 2.10.5
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
