Exclude transitional packages

--- a/releases.yaml
+++ b/releases.yaml
@@ -1665,6 +1665,10 @@ staging:
         - "wb-bootlet-*factory"
         - "wb-mqtt-spl-meter"
         - "wb-mqtt-timestamper"
+        - "wb-homa-adc"
+        - "wb-homa-gpio"
+        - "wb-homa-w1"
+        - "wb-homa-rfsniffer"
         - "wb-homa-zway"
         - "wb-mqtt-zway"
         - "wb-mqtt-lirc"
