--- a/releases.yaml
+++ b/releases.yaml
@@ -210,6 +210,11 @@ releases:
 
             wb-ec-firmware: 2.0.4
 
+            libmosquitto-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
+            libmosquitto1: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
+            libmosquittopp-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
+            libmosquittopp1: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
+
             mplc4-oni-plc-w: 1.3.6.21566
             wb-mqtt-homeui: 2.107.7-wb101-cb8ea449
             wb-utils: 4.25.3-cb8ea449
