--- a/releases.yaml
+++ b/releases.yaml
@@ -210,10 +210,10 @@ releases:
 
             wb-ec-firmware: 2.0.4
 
-            libmosquitto-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
-            libmosquitto1: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
-            libmosquittopp-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
-            libmosquittopp1: 2.0.20-1-wb102~exp~feature+fix+systemd~133~gb1353c8b
+            libmosquitto-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
+            libmosquitto1: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
+            libmosquittopp-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
+            libmosquittopp1: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
 
             mplc4-oni-plc-w: 1.3.6.21566
             wb-mqtt-homeui: 2.107.7-wb101-cb8ea449
