--- a/releases.yaml
+++ b/releases.yaml
@@ -214,6 +214,9 @@ releases:
             libmosquitto1: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
             libmosquittopp-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
             libmosquittopp1: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
+            mosquitto: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
+            mosquitto-clients: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
+            mosquitto-dev: 2.0.20-1-wb102~exp~feature+fix+systemd~135~g24a51492
 
             mplc4-oni-plc-w: 1.3.6.21566
             wb-mqtt-homeui: 2.107.7-wb101-cb8ea449
