--- a/releases.yaml
+++ b/releases.yaml
@@ -1534,6 +1534,7 @@ releases:
             mio: 1.6.5
             # WB-REF
             ref-df: 1.1.3
+            ref-dfGe: 1.1.4
             refu: 1.4.4
             refuGe: 1.4.5
             # ONOKOM
@@ -1675,7 +1676,8 @@ releases:
             # WB-MIO
             mio: 1.6.6
             # WB-REF
-            ref-df: 1.1.3
+            ref-df: 1.1.4
+            ref-dfGe: 1.1.4
             refu: 1.4.5
             refuGe: 1.4.5
             # ONOKOM
