--- a/releases.yaml
+++ b/releases.yaml
@@ -1526,6 +1526,8 @@ releases:
             mao4: 2.4.4         # на данном таргете на версиях старше 2.4.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mao4G: 2.6.3
             mao4G-C: 2.6.3
+            mao4Ge: 2.6.4
+            mao4Ge-C: 2.6.4
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.1.3
@@ -1667,8 +1669,10 @@ releases:
             mcm8Ge: 1.6.8
             # WB-MAO
             mao4: 2.4.4         # на данном таргете на версиях старше 2.4.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mao4G: 2.6.3
-            mao4G-C: 2.6.3
+            mao4G: 2.6.4
+            mao4G-C: 2.6.4
+            mao4Ge: 2.6.4
+            mao4Ge-C: 2.6.4
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.1.4
