--- a/releases.yaml
+++ b/releases.yaml
@@ -1534,6 +1534,7 @@ releases:
             wb-mai6-15: 2.1.3
             # WB-MIO
             mio: 1.6.5
+            mioGe: 1.6.7
             # WB-REF
             ref-df: 1.1.3
             ref-dfGe: 1.1.4
@@ -1682,7 +1683,8 @@ releases:
             wb-mai6: 2.1.4
             wb-mai6-15: 2.1.4
             # WB-MIO
-            mio: 1.6.6
+            mio: 1.6.7
+            mioGe: 1.6.7
             # WB-REF
             ref-df: 1.1.4
             ref-dfGe: 1.1.4
