--- a/releases.yaml
+++ b/releases.yaml
@@ -111,7 +111,7 @@ releases:
             wb-mqtt-db: 2.9.1
             wb-mqtt-db-cli: 1.4.7
             wb-mqtt-gpio: 2.16.2
-            wb-mqtt-homeui: 2.115.12
+            wb-mqtt-homeui: *wb-2504_homeui_version
             wb-mqtt-iec104: 1.1.14
             wb-mqtt-knx: 1.13.4
             wb-mqtt-logs: 1.5.3
