--- a/releases.yaml
+++ b/releases.yaml
@@ -1507,7 +1507,7 @@ releases:
             map3eG: 2.10.8
             map3h: 2.7.4            # нет в наличии устройства для проверок новых прошивок
             map3h51: 2.10.8
-            map6s: 2.10.7
+            map6s: 2.6.3            # нет в наличии исправного устройства для проверок новых прошивок
             map6s51: 2.10.8
             map6se: 2.10.8
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
