--- a/releases.yaml
+++ b/releases.yaml
@@ -2105,10 +2105,17 @@ staging:
         - "libwbmqtt1-4*"
         - "mqtt-logger"
         - "python*-json-rpc"
+        - "python-gspread"
+        - "python-mosquitto"
         - "python-mqttrpc"
+        - "python-nrf24"
         - "python-wb-common"
+        - "python-wb-io"
         - "python-wb-mcu-fw-updater"
         - "python3-modbus-utils-rpc"
+        - "python3-mosquitto"
+        - "python3-wb-diag-collect"
+        - "python3-wb-test-suite-deps"
         - "wb-bootlet-*factory"
         - "wb-mqtt-spl-meter"
         - "wb-mqtt-timestamper"
@@ -2123,7 +2130,9 @@ staging:
         - "wb-homa-ninja-bridge"
         - "wb-mqtt-sht1x"
         - "wb-mqtt-mhz19"
-        - "python3-wb-diag-collect"
+        - "wb-test-suite"
+        - "wb-test-suite-deps"
+        - "wb-test-suite-dummy"
         - package: "*wb-update-manager"
           version: "*-upgrade*"
         - package: wb-mqtt-homeui
