--- a/releases.yaml
+++ b/releases.yaml
@@ -16,8 +16,11 @@ releases:
             frpc: 0.62.1-3-gb168dfea-wb2
             frps: 0.62.1-3-gb168dfea-wb2
             fuse2fs: 1.46.2-2+wb1
+            gir1.2-mbim-1.0: 1.28.0-1~bpo11+1
             gir1.2-modemmanager-1.0: 1.20.0-1~bpo11+1-wb108
             gir1.2-nm-1.0: 1.42.4-1~bpo11+1-wb103
+            gir1.2-qmi-1.0: 1.32.0-1~bpo11+1
+            gir1.2-qrtr-1.0: 1.2.2-1~bpo11+1
             hubpower: '1.0'
             intrahouse: 5.17.67
             intrascada: 5.17.67
@@ -29,6 +32,7 @@ releases:
             libext2fs-dev: 1.46.2-2+wb1
             libext2fs2: 1.46.2-2+wb1
             libmbim-glib4: 1.28.0-1~bpo11+1
+            libmbim-glib-dev: 1.28.0-1~bpo11+1
             libmbim-proxy: 1.28.0-1~bpo11+1
             libmbim-utils: 1.28.0-1~bpo11+1
             libmm-glib-dev: 1.20.0-1~bpo11+1-wb108
@@ -43,9 +47,11 @@ releases:
             libnm-dev: 1.42.4-1~bpo11+1-wb103
             libnm0: 1.42.4-1~bpo11+1-wb103
             libqmi-glib5: 1.32.0-1~bpo11+1
+            libqmi-glib-dev: 1.32.0-1~bpo11+1
             libqmi-proxy: 1.32.0-1~bpo11+1
             libqmi-utils: 1.32.0-1~bpo11+1
             libqrtr-glib0: 1.2.2-1~bpo11+1
+            libqrtr-glib-dev: 1.2.2-1~bpo11+1
             libsigrok4: 0.5.2-4
             libsigrokdecode4: 0.5.3-4
             libss2: 1.46.2-2+wb1
@@ -2078,14 +2084,20 @@ staging:
         - "webif"
         - "zbw"
         - "zigbee2mqtt*"
-
-        - "libmbim-glib4"  # bullseye backport
-        - "libmbim-proxy"  # bullseye backport
-        - "libmbim-utils"  # bullseye backport
-        - "libqmi-glib5"   # bullseye backport
-        - "libqmi-proxy"   # bullseye backport
-        - "libqmi-utils"   # bullseye backport
-        - "libqrtr-glib0"  # bullseye backport
+        
+        - "gir1.2-mbim-1.0"  # bullseye backport
+        - "gir1.2-qmi-1.0"   # bullseye backport
+        - "gir1.2-qrtr-1.0"  # bullseye backport
+        - "libmbim-glib4"    # bullseye backport
+        - "libmbim-glib-dev" # bullseye backport
+        - "libmbim-proxy"    # bullseye backport
+        - "libmbim-utils"    # bullseye backport
+        - "libqmi-glib5"     # bullseye backport
+        - "libqmi-glib-dev"  # bullseye backport
+        - "libqmi-proxy"     # bullseye backport
+        - "libqmi-utils"     # bullseye backport
+        - "libqrtr-glib0"    # bullseye backport
+        - "libqrtr-glib-dev" # bullseye backport
 
         - "modemmanager*"
         - "libmm*"
