temporary remove linux kernel from staging (to prevent accidential 615-kenel spreading)

--- a/releases.yaml
+++ b/releases.yaml
@@ -2059,9 +2059,9 @@ staging:
         - "knxd-tools"
         - "libateccssl1.1"
         - "libwbmqtt*"
-        - "linux-headers-wb?"
-        - "linux-image-wb?"
-        - "linux-libc-dev"
+        #- "linux-headers-wb?"
+        #- "linux-image-wb?"
+        #- "linux-libc-dev"
         - "mobile-broadband-provider-info"
         - "modbus-utils"
         - "modbus-utils-rpc"
