--- a/releases.yaml
+++ b/releases.yaml
@@ -108,7 +108,7 @@ releases:
             wb-ec-firmware: 2.0.4
             wb-essential: 1.19.8                                       
             wb-firmware-realtek: 1.0.3
-            wb-homeui-backend: 2.117.11
+            wb-homeui-backend: 2.117.11-wb100
             wb-hwconf-manager: 1.67.1
             wb-knxd-config: 1.1.6
             wb-mb-explorer: 1.2.9
@@ -124,7 +124,7 @@ releases:
             wb-mqtt-db: 2.9.1
             wb-mqtt-db-cli: 1.4.8
             wb-mqtt-gpio: 2.16.2
-            wb-mqtt-homeui: 2.117.11
+            wb-mqtt-homeui: 2.117.11-wb100
             wb-mqtt-iec104: 1.1.14
             wb-mqtt-knx: 1.13.4
             wb-mqtt-logs: 1.5.4
