--- a/releases.yaml
+++ b/releases.yaml
@@ -98,7 +98,7 @@ releases:
             telegraf-wb-cloud-agent: 1.29.1-wb2
             wb-ble-tesliot: 1.1.3
             wb-cc2652p-flasher: 1.0.0
-            wb-cloud-agent: 1.6.2
+            wb-cloud-agent: 1.6.2-wb100
             wb-configs: 3.41.0
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.10.0
