--- a/releases.yaml
+++ b/releases.yaml
@@ -1719,26 +1719,26 @@ releases:
             # WB-MAP
             map3e: 2.7.5            # нет в наличии устройства для проверок новых прошивок
             map3e16: 2.8.1          # нет в наличии устройства для проверок новых прошивок
-            map3e_36: 2.10.8
-            map3e_031f6: 2.10.8
-            map3eG: 2.10.8
+            map3e_36: 2.11.0
+            map3e_031f6: 2.11.0
+            map3eG: 2.11.0
             map3h: 2.7.4            # нет в наличии устройства для проверок новых прошивок
-            map3h51: 2.10.8
-            map6s: 2.6.3            # нет в наличии исправного устройства для проверок новых прошивок
-            map6s51: 2.10.8
-            map6se: 2.10.8
+            map3h51: 2.11.0
+            map6s: 2.11.0
+            map6s51: 2.11.0
+            map6se: 2.11.0
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
-            map12eG: 2.10.8
-            map12h: 2.10.8
-            map3eG16: 2.10.8
-            map3evG16: 2.10.8
-            map6seG16: 2.10.8
-            map6sG16: 2.10.8
-            map6semG16: 2.10.8
-            map3eG16e: 2.10.8
-            map3evG16e: 2.10.8
-            map6semG16e: 2.10.8
-            map12eGe: 2.10.8
+            map12eG: 2.11.0
+            map12h: 2.11.0
+            map3eG16: 2.11.0
+            map3evG16: 2.11.0
+            map6seG16: 2.11.0
+            map6sG16: 2.11.0
+            map6semG16: 2.11.0
+            map3eG16e: 2.11.0
+            map3evG16e: 2.11.0
+            map6semG16e: 2.11.0
+            map12eGe: 2.11.0
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.5.6
@@ -1897,7 +1897,7 @@ releases:
             map3eG: 2.11.0
             map3h: 2.7.4            # нет в наличии устройства для проверок новых прошивок
             map3h51: 2.11.0
-            map6s: 2.6.3            # нет в наличии исправного устройства для проверок новых прошивок
+            map6s: 2.11.0
             map6s51: 2.11.0
             map6se: 2.11.0
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
