--- a/releases.yaml
+++ b/releases.yaml
@@ -1533,7 +1533,7 @@ releases:
             python3-modbus-utils-rpc: 1.0.1
             rapidscada: 6.0.2-1
             ss-dev: 2.0-1.43.4-2+wb1
-            telegraf-wb-cloud-agent: 1.29.1-wb3
+            telegraf-wb-cloud-agent: 1.28.4
             wb-cloud-agent: 1.2.5-wb102
             wb-cloud-agent-curl: 1.2.5-wb102
             wb-demo-kit-configs: 1.6.1
