--- a/releases.yaml
+++ b/releases.yaml
@@ -602,28 +602,10 @@ releases:
         wb8/bullseye:
             <<: *packages-wb-2507-wb8-bullseye
 
-            # mplc4-oni-plc-w: 1.3.6.21566             # есть в инклудах
-            # custom-settings-cb8ea449: 1.1.1  # есть в инклудах
-
-            # wb-mqtt-homeui
-            # wb-mqtt-homeui: 2.117.11-wb101           # 2507
-            # wb-mqtt-homeui: 2.107.7-wb101-cb8ea449   # 2501
             wb-mqtt-homeui: 2.117.11-wb101-cb8ea449
-
-            # wb-utils
-            # wb-utils: 4.26.2                         # 2507
-            # wb-utils: 4.25.3-cb8ea449                # 2501
             wb-utils: 4.26.2-cb8ea449
-
-            # wb-mqtt-serial
-            # wb-mqtt-serial: 2.180.2-wb101            # 2507
-            # wb-mqtt-serial: 2.153.3-wb102-cb8ea449   # 2501
             wb-mqtt-serial: 2.180.2-wb100-cb8ea449
-
-            # wb-suite - не нашел в репах
-            # wb-suite: 1.19.8                         # 2507
-            # wb-suite: 1.19.0-cb8ea449                # 2501
-            # wb-suite: 1.19.8-cb8ea449
+            wb-suite: 1.19.8-cb8ea449
 
     wb-2501-cb8ea449:
         wb7/bullseye:
