--- a/releases.yaml
+++ b/releases.yaml
@@ -1780,7 +1780,7 @@ releases:
             ups-v3: 1.1.0
             ups-v3-dlg2: 1.1.0
             # WB-MGE
-            mge_v3: 1.0.0
+            # mge_v3: 1.0.0
             # Component firmwares
             co2_sens_ns8: MF1.03D
             # ONOKOM
