--- a/releases.yaml
+++ b/releases.yaml
@@ -147,7 +147,7 @@ releases:
             wb-suite: 1.19.8
             wb-update-manager: 1.3.7
             wb-update-notifier: 0.1.0
-            wb-utils: 4.26.2
+            wb-utils: 4.26.2-wb100
             wb-welrok: 0.0.12
             wb-zigbee2mqtt: 1.4.1
             webif: '1.5'
