--- a/releases.yaml
+++ b/releases.yaml
@@ -1768,6 +1768,7 @@ releases:
             wb-mai-v10: 1.3.1
             wb-mai6: 2.1.5
             wb-mai6-15: 2.1.5
+            wb-mai6-15Ge: 2.2.1
             # WB-MIO
             mio: 1.7.0
             mioGe: 1.7.0
@@ -1941,8 +1942,9 @@ releases:
             mao4Ge-C: 2.6.4
             # WB-MAI
             wb-mai-v10: 1.3.1
-            wb-mai6: 2.2.0
-            wb-mai6-15: 2.2.0
+            wb-mai6: 2.2.1
+            wb-mai6-15: 2.2.1
+            wb-mai6-15Ge: 2.2.1
             # WB-MIO
             mio: 1.7.0
             mioGe: 1.7.0
