Update WB-MAP testing firmware to 2.12.0
Add new signature map3etG16e.

--- a/releases.yaml
+++ b/releases.yaml
@@ -1750,6 +1750,7 @@ releases:
             map3evG16e: 2.11.0
             map6semG16e: 2.11.0
             map12eGe: 2.11.0
+            map3etG16e: 2.12.0
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.5.6
@@ -1906,26 +1907,27 @@ releases:
             # WB-MAP
             map3e: 2.7.5            # нет в наличии устройства для проверок новых прошивок
             map3e16: 2.8.1          # нет в наличии устройства для проверок новых прошивок
-            map3e_36: 2.11.0
-            map3e_031f6: 2.11.0
-            map3eG: 2.11.0
+            map3e_36: 2.12.0
+            map3e_031f6: 2.12.0
+            map3eG: 2.12.0
             map3h: 2.7.4            # нет в наличии устройства для проверок новых прошивок
-            map3h51: 2.11.0
-            map6s: 2.11.0
-            map6s51: 2.11.0
-            map6se: 2.11.0
+            map3h51: 2.12.0
+            map6s: 2.12.0
+            map6s51: 2.12.0
+            map6se: 2.12.0
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
-            map12eG: 2.11.0
-            map12h: 2.11.0
-            map3eG16: 2.11.0
-            map3evG16: 2.11.0
-            map6seG16: 2.11.0
-            map6sG16: 2.11.0
-            map6semG16: 2.11.0
-            map3eG16e: 2.11.0
-            map3evG16e: 2.11.0
-            map6semG16e: 2.11.0
-            map12eGe: 2.11.0
+            map12eG: 2.12.0
+            map12h: 2.12.0
+            map3eG16: 2.12.0
+            map3evG16: 2.12.0
+            map6seG16: 2.12.0
+            map6sG16: 2.12.0
+            map6semG16: 2.12.0
+            map3eG16e: 2.12.0
+            map3evG16e: 2.12.0
+            map6semG16e: 2.12.0
+            map12eGe: 2.12.0
+            map3etG16e: 2.12.0
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.6.0
