Update vendor package name

--- a/releases.yaml
+++ b/releases.yaml
@@ -606,7 +606,7 @@ releases:
             wb-mqtt-homeui: 2.117.11-wb101-cb8ea449
             wb-homeui-backend: 2.117.11-wb101-cb8ea449
             wb-utils: 4.26.2-cb8ea449-1
-            wb-mqtt-serial: 2.180.2-wb101-cb8ea449
+            wb-mqtt-serial: 2.180.2-wb101-cb8ea449-wb8
             wb-suite: 1.19.8-cb8ea449
 
     wb-2501-cb8ea449:
