--- a/releases.yaml
+++ b/releases.yaml
@@ -1751,6 +1751,7 @@ releases:
             map6semG16e: 2.12.0
             map12eGe: 2.12.0
             map3etG16e: 2.12.0
+            map3eG16e2: 2.12.2
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.6.0
@@ -1928,6 +1929,7 @@ releases:
             map6semG16e: 2.12.0
             map12eGe: 2.12.0
             map3etG16e: 2.12.0
+            map3eG16e2: 2.12.2
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.6.0
