--- a/releases.yaml
+++ b/releases.yaml
@@ -1,4 +1,208 @@
 releases:
+    wb-2602:
+        packages-common: &packages-wb-2602
+            atecc-util: 0.4.12
+            ca-certificates-contactless: '0.1'
+            cmux: '1.2'
+            comerr-dev: 2.1-1.46.2-2+wb1
+            contactless-keyring: '0.1'
+            custom-settings-cb8ea449: 1.1.2
+            e2fsck-static: 1.46.2-2+wb1
+            e2fsprogs: 1.46.2-2+wb1
+            e2fsprogs-l10n: 1.46.2-2+wb1
+            emmcparm: 5.0.2
+            firmware-realtek: 20170823-1~bpo9+1
+            flash-simcom-a76xx: 1.1.2
+            frpc: 0.62.1-3-gb168dfea-wb3
+            frps: 0.62.1-3-gb168dfea-wb3
+            fuse2fs: 1.46.2-2+wb1
+            gir1.2-mbim-1.0: 1.28.0-1~bpo11+1
+            gir1.2-modemmanager-1.0: 1.20.0-1~bpo11+1-wb108
+            gir1.2-nm-1.0: 1.42.4-1~bpo11+1-wb103
+            gir1.2-qmi-1.0: 1.32.0-1~bpo11+1
+            gir1.2-qrtr-1.0: 1.2.2-1~bpo11+1
+            hubpower: '1.0'
+            intrahouse: 5.17.67
+            intrascada: 5.17.67
+            knxd: 0.14.74-1+wb100
+            knxd-dev: 0.14.74-1+wb100
+            knxd-tools: 0.14.74-1+wb100
+            libateccssl1.1: 0.2.6
+            libcom-err2: 1.46.2-2+wb1
+            libext2fs-dev: 1.46.2-2+wb1
+            libext2fs2: 1.46.2-2+wb1
+            libmbim-glib-dev: 1.28.0-1~bpo11+1
+            libmbim-glib4: 1.28.0-1~bpo11+1
+            libmbim-proxy: 1.28.0-1~bpo11+1
+            libmbim-utils: 1.28.0-1~bpo11+1
+            libmm-glib-dev: 1.20.0-1~bpo11+1-wb108
+            libmm-glib-doc: 1.20.0-1~bpo11+1-wb108
+            libmm-glib0: 1.20.0-1~bpo11+1-wb108
+            libmodbus-dev: 3.1.6-wb2
+            libmodbus5: 3.1.6-wb2
+            libmosquitto-dev: 2.0.20-1-wb102
+            libmosquitto1: 2.0.20-1-wb102
+            libmosquittopp-dev: 2.0.20-1-wb102
+            libmosquittopp1: 2.0.20-1-wb102
+            libnm-dev: 1.42.4-1~bpo11+1-wb103
+            libnm0: 1.42.4-1~bpo11+1-wb103
+            libqmi-glib-dev: 1.32.0-1~bpo11+1
+            libqmi-glib5: 1.32.0-1~bpo11+1
+            libqmi-proxy: 1.32.0-1~bpo11+1
+            libqmi-utils: 1.32.0-1~bpo11+1
+            libqrtr-glib-dev: 1.2.2-1~bpo11+1
+            libqrtr-glib0: 1.2.2-1~bpo11+1
+            libsigrok-dev: 0.5.2-3+wb100
+            libsigrok4: 0.5.2-4
+            libsigrokcxx-dev: 0.5.2-3+wb100
+            libsigrokcxx4: 0.5.2-3+wb100
+            libsigrokdecode4: 0.5.3-4
+            libss2: 1.46.2-2+wb1
+            libwbmqtt1-5: 5.5.1
+            libwbmqtt1-5-dev: 5.5.1
+            libwbmqtt1-5-test-utils: 5.5.1
+            logsave: 1.46.2-2+wb1
+            mmc-utils: 0+git20180327.b4fe0c8c-1+wb1
+            mobile-broadband-provider-info: 20230416-1
+            modbus-utils: 1.3.2
+            modbus-utils-rpc: 1.2.5
+            modemmanager: 1.20.0-1~bpo11+1-wb108
+            modemmanager-dev: 1.20.0-1~bpo11+1-wb108
+            modemmanager-doc: 1.20.0-1~bpo11+1-wb108
+            mosquitto: 2.0.20-1-wb102
+            mosquitto-clients: 2.0.20-1-wb102
+            mosquitto-dev: 2.0.20-1-wb102
+            mplc4-oni-plc-w: 1.3.6.21566
+            mqtt-tools: 1.4.5
+            mqttui: 0.22.1-1
+            network-manager: 1.42.4-1~bpo11+1-wb103
+            network-manager-config-connectivity-debian: 1.42.4-1~bpo11+1-wb103
+            network-manager-dev: 1.42.4-1~bpo11+1-wb103
+            nodejs: 22.15.0-1nodesource1
+            nodejs-16: 16.20.2-deb-1nodesource1
+            python-gsmmodem-new: '1:0.11'
+            python3-aioblescan: 0.2.14
+            python3-asyncio-mqtt: 0.10.0-wb101-1
+            python3-dali: 0.12-wb100
+            python3-intelhex: 2.3.0-1
+            python3-mqttrpc: 1.3.5
+            python3-paho-socket: 0.0.3-3
+            python3-umodbus: 1.0.4-1+wb1
+            python3-wb-common: 2.2.6
+            python3-wb-mcu-fw-updater: 1.14.3
+            python3-wb-mqtt-metrics: 0.3.8
+            python3-wb-nm-helper: 1.37.1
+            python3-wb-update-manager: 1.3.7
+            python3-zpl: 0.1.10-wb101
+            rapidscada: 6.4.1-1
+            serial-tool: 1.2.4
+            sigrok-cli: 0.7.2-1
+            ss-dev: 2.0-1.46.2-2+wb1
+            tailscale: 1.94.1
+            task-wb-base-system: 1.20.5
+            task-wb-common-pkgs: 1.20.5
+            telegraf-wb-cloud-agent: 1.29.1-wb4
+            wb-ble-tesliot: 1.1.3
+            wb-cc2652p-flasher: 1.1.0
+            wb-cloud-agent: 1.6.12
+            wb-configs: 3.49.1
+            wb-daemon-watchdogs: '1.1'
+            wb-demo-kit-configs: 1.10.1
+            wb-device-manager: 1.25.4
+            wb-diag-collect: 1.9.4
+            wb-dt-overlays: 1.7.0
+            wb-ec-firmware: 2.0.5
+            wb-essential: 1.20.5
+            wb-firmware-realtek: 1.0.4
+            wb-homeui-backend: 2.172.0
+            wb-hwconf-manager: 1.71.0
+            wb-knxd-config: 1.1.6
+            wb-mb-explorer: 1.2.9
+            wb-mcu-fw-flasher: 1.6.1
+            wb-mcu-fw-updater: 1.14.3
+            wb-modbus-ext-scanner: 1.4.0
+            wb-mqtt-adc: 2.7.1
+            wb-mqtt-alice: 0.8.2
+            wb-mqtt-apcsnmp: '0.2'
+            wb-mqtt-bmp085: '1.2'
+            wb-mqtt-co2mon: 1.1.4
+            wb-mqtt-confed: 1.16.4
+            wb-mqtt-dac: 1.2.6
+            wb-mqtt-db: 2.9.1
+            wb-mqtt-db-cli: 1.4.8
+            wb-mqtt-gpio: 2.16.3
+            wb-mqtt-homeui: 2.172.0
+            wb-mqtt-iec104: 1.1.14
+            wb-mqtt-knx: 1.13.4
+            wb-mqtt-logs: 1.5.5
+            wb-mqtt-mbgate: 1.8.8
+            wb-mqtt-metrics: 0.3.8
+            wb-mqtt-opcua: 1.2.1
+            wb-mqtt-rfblinds: 1.0.4
+            wb-mqtt-serial: 2.224.0
+            wb-mqtt-smartbus: '1.2'
+            wb-mqtt-smartweb: 1.4.11
+            wb-mqtt-snmp: 1.4.1
+            wb-mqtt-tlv493: 1.0.1
+            wb-mqtt-urri: 1.2.8
+            wb-mqtt-w1: 2.3.1
+            wb-mqtt-zabbix: '0.2'
+            wb-nm-helper: 1.37.1
+            wb-rules: 2.38.5
+            wb-rules-system: 1.13.1
+            wb-scenarios: 1.6.4
+            wb-suite: 1.20.5
+            wb-update-manager: 1.3.7
+            wb-update-notifier: 0.1.0
+            wb-utils: 4.27.5
+            wb-welrok: 0.0.20
+            wb-zigbee2mqtt: 1.4.1
+            webif: '1.5'
+            z-way-server: 4.1.1-lws16
+            z-way4wb: '1.4'
+            zbw: 1.2-wb1
+            zigbee2mqtt: 2.7.1-wb101
+            zigbee2mqtt-1.18.1: 1.18.1-wb103
+            zigbee2mqtt-2.1.1: 2.1.1-wb101
+
+        wb6/bullseye:
+            <<: *packages-wb-2602
+
+            linux-image-wb6: 5.10.35-wb181
+            linux-headers-wb6: 5.10.35-wb181
+            linux-libc-dev: 5.10.35-wb181
+            wb-bootlet-wb6x: 5.10.35-wb181-fs1.5.4-deb11-202601190209
+            u-boot-wb6: 2:2021.10+wb1.7.8
+            u-boot-tools-wb: 2:2021.10+wb1.7.8
+            tm-cpps: '16304'
+
+        wb7/bullseye:
+            <<: *packages-wb-2602
+
+            linux-image-wb7: 5.10.35-wb181
+            linux-headers-wb7: 5.10.35-wb181
+            linux-libc-dev: 5.10.35-wb181
+            wb-bootlet-wb7x: 5.10.35-wb181-fs1.5.4-deb11-202601190208
+            u-boot-wb7: 2:2021.10+wb1.7.8
+            u-boot-tools-wb: 2:2021.10+wb1.7.8
+            tm-cpps: '16304'
+            mplc4-wirenboard7: 1.3.6.21566
+
+        wb8/bullseye:
+            <<: *packages-wb-2602
+
+            arm-trusted-firmware: 2.10.0+dfsg-1+wb2
+            e2fsprogs-udeb: 1.46.2-2+wb1
+            linux-image-wb8: 6.8.0-wb150
+            linux-headers-wb8: 6.8.0-wb150
+            linux-libc-dev: 6.8.0-wb150
+            wb-bootlet-wb8x: 6.8.0-wb150-fs1.5.4-deb11-202601190209
+            u-boot-wb8: 2:2024.01+wb1.0.6
+            u-boot-tools-wb: 2:2024.01+wb1.0.6
+            tm-cpps: '16402'
+            wb-hdmi: 1.20.5
+            task-wirenboard-wb8: 1.20.5
+
     wb-2507:
         packages-common: &packages-wb-2507
             atecc-util: 0.4.12
